KNOX-3441: add delegated token exchange (actor-token and headless) with policy enforcement and audit (#1398)